ADMIN-feat-42a29.4: Rewrote MM change page. Added changing MM to user - not only to account. Added preview of changes with confirmation

--- a/design/templates/OpenGame/admin/adm_metamatter.tpl.html
+++ b/design/templates/OpenGame/admin/adm_metamatter.tpl.html
@@ -1,20 +1,54 @@
 <h2>{L_adm_mm_title}</h2>
 
 <form action="" method="post">
-  <table width="305"><tbody>
-    <tr class="c_c"><th colspan="2">{L_adm_mm_title}</th></tr>
+  <table width="305">
+    <tbody>
+
     <tr class="c_c">
-      <td>{L_adm_mm_user}</td>
-      <td><input name="id_user" type="text" value="{ID_USER}" /><br />{L_adm_mm_change_hint}</td>
+      <th colspan="2">{L_adm_mm_title}</th>
     </tr>
     <tr class="c_c">
+      <td>{L_adm_mm_account}</td>
+      <td>
+        <input name="accountId" type="text" value="{ACCOUNT_ID}"/><br/>
+        {L_adm_mm_account_hint}
+      </td>
+    </tr>
+
+
+    <tr class="c_c">
+      <td colspan="2">{L_adm_or_caption}</td>
+    </tr>
+
+    <tr>
+      <th>{L_adm_mm_player}</th>
+      <th>
+        <input name="playerId" type="text" value="{PLAYER_ID}"/><br/>
+        {L_adm_mm_player_hint}
+      </th>
+    </tr>
+
+
+    <tr class="c_c">
       <td>{L_sys_metamatter}</td>
-      <td><input name="points" type="text" value="{POINTS}" /></td>
+      <td><input name="points" type="text" value="{POINTS}"/></td>
     </tr>
     <tr class="c_c">
       <td>{L_adm_reason}</td>
-      <td><input name="reason" type="text" value="{REASON}" /></td>
+      <td><input name="reason" type="text" value="{REASON}"/></td>
     </tr>
-    <tr class="c_c"><th colspan="2"><input type="Submit" value="{L_adm_apply}" /></th></tr>
-  </tbody></table>
+
+
+    <tr class="c_c">
+      <th colspan="2">
+        <!-- IF NEED_CONFIRMATION -->
+        <input type="submit" name="confirm_mm_change" value="{L_adm_confirm_do}"/>
+        <!-- ELSE -->
+        <input type="Submit" value="{L_adm_apply}"/>
+        <!-- ENDIF -->
+      </th>
+    </tr>
+
+    </tbody>
+  </table>
 </form>
