--- a/design/templates/OpenGame/admin/admin_darkmatter.tpl.html
+++ b/design/templates/OpenGame/admin/admin_darkmatter.tpl.html
@@ -9,7 +9,7 @@
     <tr>
       <th>{L_adm_dm_user}</th>
       <th>
-        <input name="id_user" type="text" value="{ID_USER}"/><br/>
+        <input name="playerId" type="text" value="{PLAYER_ID}"/><br/>
         {L_adm_dm_change_hint}
       </th>
     </tr>
