ADMIN-fix-43a1.0: Fixed typo in Alliance management

--- a/design/templates/OpenGame/admin/admin_ally_one.tpl.html
+++ b/design/templates/OpenGame/admin/admin_ally_one.tpl.html
@@ -102,7 +102,7 @@
 
   <!-- IF ! members.OWNER -->
   <!-- DEFINE $PLAYER_CLASS = '' -->
-  <!-- ELSEIF SN_TIME_NOW - members.OWNER > ALLIANCE_HEAD_INACTIVE_TIMEOUT -->
+  <!-- ELSEIF SN_TIME_NOW - members.ONLINE > ALLIANCE_HEAD_INACTIVE_TIMEOUT -->
   <!-- DEFINE $PLAYER_CLASS = 'error' -->
   <!-- ELSE -->
   <!-- DEFINE $PLAYER_CLASS = 'ok' -->
