CODE-misc-43a1.17: Class AccessLogged

--- a/design/templates/OpenGame/universe.tpl.html
+++ b/design/templates/OpenGame/universe.tpl.html
@@ -12,8 +12,8 @@ var uni_galaxy = {galaxy};
 var uni_system = {system};
 
 var user_id = {USER_ID};
-var game_user_count = {userCount};
-var game_ally_count = {ALLY_COUNT};
+var game_user_count = Math.intVal("{userCount}");
+var game_ally_count = Math.intVal("{ALLY_COUNT}");
 
 var opt_uni_avatar_user = '{opt_uni_avatar_user}';
 var opt_uni_avatar_ally = '{opt_uni_avatar_ally}';
