--- a/design/templates/OpenGame/fleet5.tpl.html
+++ b/design/templates/OpenGame/fleet5.tpl.html
@@ -1,4 +1,13 @@
 <!-- INCLUDE fleet_javascript -->
+
+<script type="text/javascript" src="js/fleet_gather.js"></script>
+
+<script type="text/javascript">
+  /* <!-- BEGIN colonies --> */
+  colonies['{colonies.ID}'] = [Math.intVal('{colonies.METAL}'), Math.intVal('{colonies.CRYSTAL}'), Math.intVal('{colonies.DEUTERIUM}'), Math.intVal('{colonies.FLEET_CAPACITY}')];
+  /* <!-- END colonies --> */
+</script>
+
 <h2>{L_flt_gather_all}</h2>
 <!-- IF .results -->
   <h3>{L_flt_gather_report}</h3>
@@ -23,147 +32,6 @@
   <br />
 <!-- ENDIF -->
 
-<script type="text/javascript"><!--
-var colonies = Array();
-var reCalcGatheringStarted = false;
-
-function reCalcGathering()
-{
-  if(reCalcGatheringStarted)
-  {
-    return;
-  }
-  reCalcGatheringStarted = true;
-  /*
-  var resourceGrid = Array();
-  resourceGrid[{D_RES_METAL}] = 0;
-  resourceGrid[{D_RES_CRYSTAL}] = 0;
-  resourceGrid[{D_RES_DEUTERIUM}] = 0;
-  resourceGrid[0] = 0;
-  for(colony in colonies)
-  {
-    colonyValue = 0;
-    maxColonyValue = 0;
-    freeCapacity = colonies[colony][3];
-    if(document.getElementsByName('resources[' + colony + '][{D_RES_METAL}]')[0].checked)
-    {
-      // addedValue = colonies[colony][0];
-      // addedValue = Math.min(freeCapacity, colonies[colony][0]);
-      addedValue = freeCapacity < colonies[colony][0] ? freeCapacity : colonies[colony][0];
-      freeCapacity -= addedValue;
-
-      resourceGrid[{D_RES_METAL}] += addedValue;
-      colonyValue += addedValue;
-      maxColonyValue += colonies[colony][0];
-    }
-    if(document.getElementsByName('resources[' + colony + '][{D_RES_CRYSTAL}]')[0].checked)
-    {
-      // addedValue = colonies[colony][1];
-      // addedValue = Math.min(freeCapacity, colonies[colony][1]);
-      addedValue = freeCapacity < colonies[colony][1] ? freeCapacity : colonies[colony][1];
-      freeCapacity -= addedValue;
-
-      resourceGrid[{D_RES_CRYSTAL}] += addedValue;
-      colonyValue += addedValue;
-      maxColonyValue += colonies[colony][1];
-
-      // resourceGrid[{D_RES_CRYSTAL}] += colonies[colony][1];
-      // colonyValue += colonies[colony][1];
-    }
-    if(document.getElementsByName('resources[' + colony + '][{D_RES_DEUTERIUM}]')[0].checked)
-    {
-      // addedValue = colonies[colony][2];
-      // addedValue = Math.min(freeCapacity, colonies[colony][2]);
-      addedValue = freeCapacity < colonies[colony][2] ? freeCapacity : colonies[colony][2];
-      freeCapacity -= addedValue;
-
-      resourceGrid[{D_RES_DEUTERIUM}] += addedValue;
-      colonyValue += addedValue;
-      maxColonyValue += colonies[colony][2];
-
-      // resourceGrid[{D_RES_DEUTERIUM}] += colonies[colony][2];
-      // colonyValue += colonies[colony][2];
-    }
-    document.getElementById('ga_' + colony + '_0').innerHTML = '<span class="' + (colonyValue < maxColonyValue ? (colonies[colony][3] ? 'negative' : 'zero') : 'positive') + '">' + sn_format_number(colonyValue) + '</span>';
-    // document.getElementById('ga_' + colony + '_0').innerHTML = sn_format_number(colonyValue);
-  }
-  document.getElementById('ga_0_{D_RES_METAL}').innerHTML = sn_format_number(resourceGrid[{D_RES_METAL}]);
-  document.getElementById('ga_0_{D_RES_CRYSTAL}').innerHTML = sn_format_number(resourceGrid[{D_RES_CRYSTAL}]);
-  document.getElementById('ga_0_{D_RES_DEUTERIUM}').innerHTML = sn_format_number(resourceGrid[{D_RES_DEUTERIUM}]);
-  document.getElementById('ga_0_0').innerHTML = sn_format_number(resourceGrid[{D_RES_METAL}] + resourceGrid[{D_RES_CRYSTAL}] + resourceGrid[{D_RES_DEUTERIUM}]);
-  */
-
-  resourceGrid = [0,0,0];
-/*
-  resourceIDs = [{D_RES_METAL}, {D_RES_CRYSTAL}, {D_RES_DEUTERIUM}];
-  resourceGrid[{D_RES_METAL}] = 0;
-  resourceGrid[{D_RES_CRYSTAL}] = 0;
-  resourceGrid[{D_RES_DEUTERIUM}] = 0;
-  resourceGrid[0] = 0;
-*/
-  for(colony in colonies)
-  {
-    colonyValue = 0;
-    maxColonyValue = 0;
-    freeCapacity = colonies[colony][3];
-
-    for(resourceID in resourceGrid)
-    {
-      // if(document.getElementsByName('resources[' + colony + '][' + resourceIDs[resourceID] + ']')[0].checked)
-      if(jQuery('#ga_' + colony + '_' + resourceID + '').is(':checked'))
-      {
-        addedValue = Math.min(freeCapacity, colonies[colony][resourceID]);
-        freeCapacity -= addedValue;
-
-        resourceGrid[resourceID] += addedValue;
-        colonyValue += addedValue;
-        maxColonyValue += colonies[colony][resourceID];
-      }
-    }
-/*
-    if(document.getElementsByName('resources[' + colony + '][{D_RES_METAL}]')[0].checked)
-    {
-      addedValue = Math.min(freeCapacity, colonies[colony][0]);
-      freeCapacity -= addedValue;
-
-      resourceGrid[0] += addedValue;
-      colonyValue += addedValue;
-      maxColonyValue += colonies[colony][0];
-    }
-    if(document.getElementsByName('resources[' + colony + '][{D_RES_CRYSTAL}]')[0].checked)
-    {
-      addedValue = Math.min(freeCapacity, colonies[colony][1]);
-      freeCapacity -= addedValue;
-
-      resourceGrid[1] += addedValue;
-      colonyValue += addedValue;
-      maxColonyValue += colonies[colony][1];
-    }
-    if(document.getElementsByName('resources[' + colony + '][{D_RES_DEUTERIUM}]')[0].checked)
-    {
-      addedValue = Math.min(freeCapacity, colonies[colony][2]);
-      freeCapacity -= addedValue;
-
-      resourceGrid[2] += addedValue;
-      colonyValue += addedValue;
-      maxColonyValue += colonies[colony][2];
-    }
-*/
-    jQuery('#ga_' + colony + '_a').html('<span class="' + (colonyValue < maxColonyValue ? (colonies[colony][3] ? 'negative' : 'zero') : 'positive') + '">' + sn_format_number(colonyValue) + '</span>');
-    // document.getElementById('ga_' + colony + '_all').innerHTML = '<span class="' + (colonyValue < maxColonyValue ? (colonies[colony][3] ? 'negative' : 'zero') : 'positive') + '">' + sn_format_number(colonyValue) + '</span>';
-  }
-  // document.getElementById('ga_0_{D_RES_METAL}').innerHTML = sn_format_number(resourceGrid[0]);
-  // document.getElementById('ga_0_{D_RES_CRYSTAL}').innerHTML = sn_format_number(resourceGrid[1]);
-  // document.getElementById('ga_0_{D_RES_DEUTERIUM}').innerHTML = sn_format_number(resourceGrid[2]);
-  // document.getElementById('ga_0_all').innerHTML = sn_format_number(resourceGrid[0] + resourceGrid[1] + resourceGrid[2]);
-  jQuery('#ga_a_0').html(sn_format_number(resourceGrid[0]));
-  jQuery('#ga_a_1').html(sn_format_number(resourceGrid[1]));
-  jQuery('#ga_a_2').html(sn_format_number(resourceGrid[2]));
-  jQuery('#ga_a_a').html(sn_format_number(resourceGrid[0] + resourceGrid[1] + resourceGrid[2]));
-
-  reCalcGatheringStarted = false;
-}
---></script>
 
 <form action="fleet.php?fleet_page=5" method="post">
   <table border="0" cellpadding="0" cellspacing="1">
@@ -202,50 +70,47 @@ function reCalcGathering()
         </th>
         <!-- IF colonies.FLEET_CAPACITY -->
         <th><span class="fr">{colonies.FLEET_CAPACITY_TEXT}</span></th>
-        <th><span class="fr">{colonies.DURATION}</span></th>
+        <th><span class="fr">{colonies.DURATION_TEXT}</span></th>
         <!-- ELSE -->
         <th colspan=2><span class="negative">{L_flt_no_transports}</span></th>
         <!-- ENDIF -->
       </tr>
-      <script type="text/javascript">colonies['{colonies.ID}'] = [parseInt('{colonies.METAL}'), parseInt('{colonies.CRYSTAL}'), parseInt('{colonies.DEUTERIUM}'), parseInt('{colonies.FLEET_CAPACITY}')];</script>
     <!-- BEGINELSE colonies -->
       <th colspan="8">{L_fl_nocolonies}</th>
     <!-- END colonies -->
+
     <!-- IF METAL_NEED > 0 || CRYSTAL_NEED > 0 || DEUTERIUM_NEED > 0 -->
       <!-- DEFINE $ROWSPAN = 3 -->
     <!-- ELSE -->
       <!-- DEFINE $ROWSPAN = 2 -->
     <!-- ENDIF -->
-    <tr>
+    <tr class="c_r">
       <th class="c_l" colspan="2">{L_sys_total}</th>
-      <th class="c_r"><span id="ga_a_0"></span></th>
-      <th class="c_r"><span id="ga_a_1"></span></th>
-      <th class="c_r"><span id="ga_a_2"></span></th>
-      <th class="c_r"><span id="ga_a_a"></span></th>
+      <th><span id="ga_a_0"></span></th>
+      <th><span id="ga_a_1"></span></th>
+      <th><span id="ga_a_2"></span></th>
+      <th><span id="ga_a_a"></span></th>
       <th class="c_c" colspan="2" rowspan="{$ROWSPAN}"><input type="submit" value="{L_flt_gather_all}" /></th>
     </tr>
+
     <!-- IF $ROWSPAN > 2 -->
-    <tr>
+    <tr class="c_r">
       <th class="c_l" colspan="2">{L_sys_need}</th>
-      <th class="c_r">{METAL_NEED}</th>
-      <th class="c_r">{CRYSTAL_NEED}</th>
-      <th class="c_r">{DEUTERIUM_NEED}</th>
-      <th class="c_r">&nbsp;</th>
+      <th>{METAL_NEED}</th>
+      <th>{CRYSTAL_NEED}</th>
+      <th>{DEUTERIUM_NEED}</th>
+      <th>&nbsp;</th>
     </tr>
     <!-- ENDIF -->
-    <tr>
+
+    <tr class="c_r">
       <th class="c_l" colspan="2">{L_sys_on_planet}</th>
-      <th class="c_r">{PLANET_METAL_TEXT}</th>
-      <th class="c_r">{PLANET_CRYSTAL_TEXT}</th>
-      <th class="c_r">{PLANET_DEUTERIUM_TEXT}</th>
-      <th class="c_r">&nbsp;</th>
+      <th>{PLANET_METAL_TEXT}</th>
+      <th>{PLANET_CRYSTAL_TEXT}</th>
+      <th>{PLANET_DEUTERIUM_TEXT}</th>
+      <th>&nbsp;</th>
     </tr>
   </table>
 </form>
-<!-- INCLUDE page_hint -->
 
-<script type="text/javascript"><!--
-   jQuery(document).ready(function(){
-     reCalcGathering();
-   });
---></script>
+<!-- INCLUDE page_hint -->
