INT-fix-43a3.6: Fixed impossible to change planet density on Resources page. Also pretty_number() replaced with prettyNumberStyledCompare() where apropriated

--- a/design/templates/OpenGame/resources.tpl.html
+++ b/design/templates/OpenGame/resources.tpl.html
@@ -44,7 +44,7 @@ function res_set_all(obj)
         <label for="density_type">{L_ov_core_change_to}</label>
         <select name="density_type" id="density_type">
           <!-- BEGIN densities -->
-          <option value="{densities.ID}" rest="{densities.REST}" html="{densities.COST_TEXT}" html_class="{densities.COST_TEXT_CLASS}"<!-- IF PLANET_DENSITY_INDEX == densities.ID --> selected<!-- ENDIF -->>{densities.TEXT}</option>
+          <option value="{densities.ID}" rest="{densities.REST}" html="{densities.COST_TEXT}" html_class="{densities.COST_TEXT_CLASS}"<!-- IF PLANET_DENSITY_INDEX == densities.ID --> selected current="1"<!-- ENDIF -->>{densities.TEXT}</option>
           <!-- END densities -->
         </select>
         <input type="submit" id="transmute_button" name="transmute" value="{L_sys_change}" disabled="1"/> {L_sys_for} <span id="transmutation_cost" class="positive">0</span> {L_sys_dark_matter_sh}
@@ -54,7 +54,7 @@ function res_set_all(obj)
           jQuery("#density_type").change(function(){
             selected = jQuery("#density_type option:selected");
             $("#transmutation_cost").html(selected.attr("html")).removeClass().addClass(selected.attr("html_class"));
-            parseInt(selected.attr("rest")) <= 0 ? $("#transmute_button").attr("disabled", 1) : $("#transmute_button").removeAttr("disabled");
+            $("#transmute_button").button({disabled: parseInt(selected.attr("rest")) <= 0 || selected.attr("current") == '1'});
           });
         </script>
       </th>
