FLEET-feat-43a4.6: Mission 'Espionage' - rewrite

--- a/design/templates/OpenGame/_template.css
+++ b/design/templates/OpenGame/_template.css
@@ -3191,6 +3191,9 @@ td,
 .subheader, tr.subheader > td, tr.subheader > th {
   background-color: #233452;
 }
+.spy_table tr.subheader > td, .spy_table tr.subheader > th {
+  background-color: #233452;
+}
 .th, .header {
   background-color:  #132544; /*rgba(0,0,0,0.35);*/
 }
