CODE-misc-43a5.0: Code refactoring - /includes/functions/eco_get_planet_caps.php -> \Meta\Economic\ResourceCalculations

--- a/design/templates/OpenGame/msg_message_spy.tpl.html
+++ b/design/templates/OpenGame/msg_message_spy.tpl.html
@@ -33,9 +33,10 @@
 
   <tr>
     <th class="c_c" colspan="2">
-      {L_sys_mess_spy_detect_chance_no_percent} {SPIES_DETECTION_CHANCE}%
       <!-- IF SPIES_DESTROYED -->
-      <br/>{L_sys_mess_spy_destroyed}
+      {L_sys_mess_spy_destroyed}
+      <!-- ELSE -->
+      {L_sys_mess_spy_detect_chance_no_percent} {SPIES_DETECTION_CHANCE}%
       <!-- ENDIF -->
     </th>
   </tr>
