INT-fix-43a5.3: Fixes in bonus hint on building page

--- a/design/templates/OpenGame/buildings_builds.tpl.html
+++ b/design/templates/OpenGame/buildings_builds.tpl.html
@@ -161,18 +161,18 @@ planet = {
 
         'level': Math.floorVal('{resource.LEVEL}'),
         'sys_metal': Math.floorVal('{resource.R901}'),
-        'metal_diff': Math.floorVal('{resource.D901}'),
+        'metal_diff': ('{resource.D901}'),
         'sys_crystal': Math.floorVal('{resource.R902}'),
-        'crystal_diff': Math.floorVal('{resource.D902}'),
+        'crystal_diff': ('{resource.D902}'),
         'sys_deuterium': Math.floorVal('{resource.R903}'),
-        'deuterium_diff': Math.floorVal('{resource.D903}'),
+        'deuterium_diff': ('{resource.D903}'),
         'sys_energy': Math.floorVal('{resource.R904}'),
-        'energy_diff': Math.floorVal('{resource.D904}'),
+        'energy_diff': ('{resource.D904}'),
 
         'sys_colonies': Math.intVal('{resource.RCOLONIES_MAX}'),
-        'sys_colonies_diff': Math.intVal('{resource.DCOLONIES_MAX}'),
+        'sys_colonies_diff': ('{resource.DCOLONIES_MAX}'),
         'sys_expeditions': Math.intVal('{resource.REXPEDITIONS_MAX}'),
-        'sys_expeditions_diff': Math.intVal('{resource.DEXPEDITIONS_MAX}'),
+        'sys_expeditions_diff': ('{resource.DEXPEDITIONS_MAX}'),
       },
       <!-- END resource -->
     ]
