ADMIN-feat-43a6.0: Admin Tools - repacking `counter` table

--- a/design/templates/OpenGame/admin/admin_tools.tpl.html
+++ b/design/templates/OpenGame/admin/admin_tools.tpl.html
@@ -22,4 +22,7 @@
   <div>
     <a href="admin/tools.php?mode={D_ADM_PTL_TEST}" class="button_pseudo w100">{L_adm_ptl_test}</a>
   </div>
+  <div>
+    <a href="admin/tools.php?mode={D_ADM_COUNTER_RECALC}" class="button_pseudo w100">{L_adm_counter_recalc}</a>
+  </div>
 </div>
