INT-misc-43a6.6: Chat module support

--- a/design/templates/OpenGame/navbar.tpl.html
+++ b/design/templates/OpenGame/navbar.tpl.html
@@ -103,7 +103,7 @@
           <!-- END topnav_planets -->
         </select>
 
-        <div id="navbar_player_count">{L_top_online}&nbsp;[{USERS_ONLINE}/{USERS_TOTAL}]</div>
+        <div id="navbar_player_count">{L_top_online}&nbsp;[<span class="js_global_users_online">{USERS_ONLINE}</span>/<span class="js_global_users_total">{USERS_TOTAL}</span>]</div>
       </div>
 
       <div class="contF flexW cell" id="navbar-container-time">
