NAVBAR-misc-43a6.15: Updated navbar internals a bit

--- a/design/templates/OpenGame/navbar.tpl.html
+++ b/design/templates/OpenGame/navbar.tpl.html
@@ -235,11 +235,11 @@
             <img class="navbar_button_image" src="{I_navbar_dark_matter}" alt="{L_sys_dark_matter}" title="{L_sys_dark_matter}">
             <!-- IF TOPNAV_METAMATTER -->
             <span id="navbar_button_dm_mm" class="a50 metamatter posRB">{TOPNAV_METAMATTER_TEXT}</span>
-            <span id="navbar_button_dm_dm" class="a50 dark_matter posRB">{TOPNAV_DARK_MATTER_PLAIN_TEXT}</span>
+            <span id="navbar_button_dm_dm" class="a50 dark_matter posRB js_dark_matter_plain">{TOPNAV_DARK_MATTER_PLAIN_TEXT}</span>
             <span id="navbar_button_dm_plus" class="a50 ok posLB">+</span>
             <!-- DEFINE $NAVBAR_DEBIT_LINE_CLASS = 'navbar_button_dm_debit_line' -->
             <!-- ENDIF -->
-            <span class="a50 ok posRB {$NAVBAR_DEBIT_LINE_CLASS}">{TOPNAV_DARK_MATTER_TEXT}</span>
+            <span class="a50 ok posRB {$NAVBAR_DEBIT_LINE_CLASS} js_dark_matter_full">{TOPNAV_DARK_MATTER_TEXT}</span>
             <span class="posLT w100 a50">
               {L_sys_dark_matter_sh}
             </span>
